0.26-dev

  Support morercpthosts.cdb

  config now takes an extra "type" parameter.  If it's "map" then a
  reference to a tied hash will be returned.


0.25 - 2003/03/18

  Use the proper RFC2822 date format in the Received headers. (Somehow
  I had convinced myself that ISO8601 dates were okay). Thanks to
  Kee Hinckley <nazgul@somewhere.com>.

  Print the date in the local timezone instead of in -0000. (Not
  entirely convinced this is a good idea)

  Lots of changes from Rasjid Wilcox <rasjidw@openminddev.net>:

  Fix error handling in queue/qmail-queue. (Rasjid)
 
  Add option to queue/qmail-queue to specify an alternate qmail-queue
  location. (Rasjid)

  Add support for the QMAILQUEUE environment variable. (Rasjid)

  PPerl compatibility (yay!)  (Rasjid)

  Allow mail to <abuse> and <postmaster> to go through. (Rasjid)

  Add "deny" hook that gets called when another hook returns DENY or
  DENYSOFT. (Rasjid)

  Add list of required modules to the README. Thanks to Skaag Argonius
  <skaag@skaag.net>.

  Fix dnsbl plugin to give us all the results. (Patch from Matt
  Sergeant <matt@sergeant.org>)

  Disable identd lookups by passing -R to tcpserver. (Thanks to Matt)

  add plugin hooks for HELO and EHLO (Devin Carraway
  <qpsmtpd-list@devin.com>)

  check_spamhelo plugin to deny mail from claimed senders from the
  list specified in F<badhelo>.  (For example aol.com or yahoo.com) 
  (Devin Carraway)


0.20 - 2002/12/09

  Fix the "too many dots in the beginning of the line" bug.

  Add munge_subject_threshold and reject_threshold options to the
  spamassassin plugin.  Add documentation to the spamassassin plugin.

  Add -p to mkdir in log/run (Rasjid Wilcox <rasjidw@openminddev.net>)

  clamav plugin, thanks to Matt Sergeant, matt@sergeant.org.
  Enabling this might require you to increase your "softlimit" in
  the run file.  http://www.clamav.org/

  Make the spamassassin plugin not stop the next content plugins from
  running.
